--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,32 +1,7 @@
-{% load static %}
-<html class="wide wow-animation" lang="en">
-  <head>
-    <title>Home</title>
-    <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/fonts.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'images/favicon.ico' %}">
-    <!--<link rel="stylesheet" href="{% static '//fonts.googleapis.com/css?family=Work+Sans:300,400,500,700%7CZilla+Slab:300,400,500,700,700i%7CGloria+Hallelujah' %}" type="text/css">-->
-    <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
-  </head>
-  <body>
-    <div class="preloader">
-      <div class="preloader-logo"><a class="brand" href="index.html"><img class="brand-logo-dark" src="{% static 'images/TNPULogo.png' %}" alt="" width="245" height="50"/><img class="brand-logo-light" src="{% static 'images/TNPULogo.png' %}" alt="" width="245" height="50"/></a>
-      </div>
-      <div class="preloader-body">
-        <div class="cssload-container">
-          <div class="cssload-speeding-wheel"></div>
-        </div>
-      </div>
-    </div>
-    <div class="page">
-      <!-- Page Header-->
-      <header class="page-header">
+{% extends 'blog/base.html' %}
+{% load static %}	
+{% block header %}
+	<header class="page-header">
         <!-- RD Navbar-->
         <div class="rd-navbar-wrap">
           <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static" data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px" data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
@@ -37,17 +12,19 @@
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
-                  <div class="rd-navbar-brand"><a class="brand" href="index.html"><img class="brand-logo-dark" src="{% static 'images/TNPULogo.png' %}" alt="" width="245" height="50"/><img class="brand-logo-light" src="{% static 'images/TNPULogo.png' %}" alt="" width="245" height="50"/></a>
+                  <div class="rd-navbar-brand"><a class="brand" href="#"><img class="brand-logo-dark" src="{% static 'images/TNPULogo.png' %}" alt="" width="245" height="50"/><img class="brand-logo-light" src="{% static 'images/TNPULogo.png' %}" alt="" width="245" height="50"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-nav-wrap">
                   <!-- RD Navbar Nav		-->
                   <ul class="rd-navbar-nav">
-                    <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Домашня</a>
+                    <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">Курси</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">About</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Про Сайт</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Typography</a>
+                    </li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
                     </li>
                   </ul>
                 </div>
@@ -56,259 +33,8 @@
           </nav>
         </div>
       </header>
-    <img src="{% static 'images/Hed.jpeg' %}" alt="" width="1920" height="72">
-
-      <!--<section>
-        Swiper
-        <div class="swiper-container swiper-slider swiper-slider-1" data-loop="false" data-autoplay="5000" data-simulate-touch="false">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide" data-slide-bg="{% static 'images/swiper-slide-1.jpg' %}">
-              <div class="swiper-slide-caption context-dark">
-                <div class="container">
-                  <div class="row">
-                    <div class="col-md-10 col-lg-7">
-                      <div class="box-animation">
-                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">Quality Higher Education</h6>
-                        <h2 data-caption-animate="slideInLeft" data-caption-delay="300">Any Successful Career Starts  <span class="text-italic font-weight-bold">With Good Education</span>
-                        </h2>
-                        <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#"><span>sign up for excursion</span></a></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide" data-slide-bg="{% static 'images/swiper-slide-2.jpg' %}">
-              <div class="swiper-slide-caption context-dark">
-                <div class="container">
-                  <div class="row">
-                    <div class="col-md-10 col-lg-7">
-                      <div class="box-animation">
-                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">A vAriety of programs</h6>
-                        <h2 data-caption-animate="slideInLeft" data-caption-delay="300">Providing Students with  <span class="text-italic font-weight-bold">Professional Education</span>
-                        </h2>
-                        <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#"><span>sign up for excursion</span></a></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide" data-slide-bg="{% static 'images/swiper-slide-3.jpg' %}">
-              <div class="swiper-slide-caption context-dark">
-                <div class="container">
-                  <div class="row">
-                    <div class="col-md-10 col-lg-7">
-                      <div class="box-animation">
-                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">Campus Community</h6>
-                        <h2 data-caption-animate="slideInLeft" data-caption-delay="300">Become a Part of Our Campus and <span class="text-italic font-weight-bold">Make Friends</span>
-                        </h2>
-                        <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#"><span>sign up for excursion</span></a></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-      </section>-->
-      <!-- A Few Words About Me-->
-      <!--<section class="section section-lg bg-gray-100">
-        <div class="container">
-          <div class="row row-50 justify-content-center justify-content-lg-between">
-            <div class="col-12">
-              <h3 class="h-custom-1 f1">A Few Words About Us</h3>
-            </div>
-            <div class="col-md-6 col-lg-5 col-xl-3 wow fadeIn">
-              <p>At Bradston College, we aim to deliver high-quality education and training that responds to the needs of employers and individuals. We are working to deliver courses that are developed in conjunction with employers.</p><a class="button button-primary-gradient" href="#"><span>read more</span></a>
-            </div>
-            <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay=".2s">
-              <!-- Linear progress bar
-              <article class="progress-linear">
-                <div class="progress-header">
-                  <p>Accounting</p><span class="progress-value">75</span>
-                </div>
-                <div class="progress-bar-linear-wrap">
-                  <div class="progress-bar-linear"></div>
-                </div>
-              </article>
-              <!-- Linear progress bar
-              <article class="progress-linear">
-                <div class="progress-header">
-                  <p>Management</p><span class="progress-value">33</span>
-                </div>
-                <div class="progress-bar-linear-wrap">
-                  <div class="progress-bar-linear"></div>
-                </div>
-              </article>
-              <!-- Linear progress bar
-              <article class="progress-linear">
-                <div class="progress-header">
-                  <p>Computer Technology</p><span class="progress-value">88</span>
-                </div>
-                <div class="progress-bar-linear-wrap">
-                  <div class="progress-bar-linear"></div>
-                </div>
-              </article>
-              <!-- Linear progress bar
-              <article class="progress-linear">
-                <div class="progress-header">
-                  <p>Medicine</p><span class="progress-value">75</span>
-                </div>
-                <div class="progress-bar-linear-wrap">
-                  <div class="progress-bar-linear"></div>
-                </div>
-              </article>
-              <!-- Linear progress bar
-              <article class="progress-linear">
-                <div class="progress-header">
-                  <p>Jurisprudence</p><span class="progress-value">50</span>
-                </div>
-                <div class="progress-bar-linear-wrap">
-                  <div class="progress-bar-linear"></div>
-                </div>
-              </article>
-            </div>
-            <div class="col-xl-4 wow fadeIn" data-wow-delay=".4s"><img class="img-rounded" src="{% static 'images/home-1-369x341.jpg' %}" alt=""></div>
-          </div>
-        </div>
-      </section>-->
-      <!-- Featured Projects-->
-      <section class="section section-lg bg-default text-center">
-        <div class="container">
-          <h2 class="wow fadeIn">Ваші Предмети</h2>
-          <div class="row row-30 row-md-50 row-xl-70">
-            <div class="col-sm-6 col-lg-4 wow fadeIn">
-              <!-- Post Minimal-->
-              <div class="post-minimal">
-                <figure class="post-minimal-media"><a href="#"><img class="post-minimal-image" src="{% static 'images/Programirovanie.jpg' %}" alt="" width="370" height="260"/></a></figure>
-                <div class="post-minimal-meta">
-                  <ul class="list-inline">
-                    <li class="list-inline-item">Викладач: </li>
-                    <li class="list-inline-itema"><a href="#">Сергій Струк</a></li>
-                  </ul>
-                </div>
-                <h4 class="post-minimal-title"><a href="#">Програмування</a></h4>
-              </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 wow fadeIn" data-wow-delay=".2s">
-              <!-- Post Minimal-->
-              <div class="post-minimal">
-                <figure class="post-minimal-media"><a href="#"><img class="post-minimal-image" src="{% static 'images/Mat-Analiz.jpg' %}" alt="" width="370" height="260"/></a></figure>
-                <div class="post-minimal-meta">
-                  <ul class="list-inline">
-                    <li class="list-inline-item">Teacher: </li>
-                    <li class="list-inline-itema"><a href="#">Іван Грод</a></li>
-                  </ul>
-                </div>
-                <h4 class="post-minimal-title"><a href="#">Математичний Аналіз</a></h4>
-              </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 wow fadeIn" data-wow-delay=".4s">
-              <!-- Post Minimal-->
-              <div class="post-minimal">
-                <figure class="post-minimal-media"><a href="#"><img class="post-minimal-image" src="{% static 'images/grid-gallery-3-370x260.jpg' %}" alt="" width="370" height="260"/></a></figure>
-                <div class="post-minimal-meta">
-                  <ul class="list-inline">
-                    <li class="list-inline-item">Teacher: </li>
-                    <li class="list-inline-itema"><a href="#">Steven Carter</a></li>
-                  </ul>
-                </div>
-                <h4 class="post-minimal-title"><a href="#">Graphic Design Course</a></h4>
-              </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 wow fadeIn">
-              <!-- Post Minimal-->
-              <div class="post-minimal">
-                <figure class="post-minimal-media"><a href="#"><img class="post-minimal-image" src="{% static 'images/grid-gallery-4-370x260.jpg' %}" alt="" width="370" height="260"/></a></figure>
-                <div class="post-minimal-meta">
-                  <ul class="list-inline">
-                    <li class="list-inline-item">Teacher: </li>
-                    <li class="list-inline-itema"><a href="#">Julie Weaver</a></li>
-                  </ul>
-                </div>
-                <h4 class="post-minimal-title"><a href="#">Computer Science </a></h4>
-              </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 wow fadeIn" data-wow-delay=".2s">
-              <!-- Post Minimal-->
-              <div class="post-minimal">
-                <figure class="post-minimal-media"><a href="#"><img class="post-minimal-image" src="{% static 'images/grid-gallery-5-370x260.jpg' %}" alt="" width="370" height="260"/></a></figure>
-                <div class="post-minimal-meta">
-                  <ul class="list-inline">
-                    <li class="list-inline-item">Teacher: </li>
-                    <li class="list-inline-itema"><a href="#">Kathy Gibson</a></li>
-                  </ul>
-                </div>
-                <h4 class="post-minimal-title"><a href="#">Political Economy</a></h4>
-              </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 wow fadeIn" data-wow-delay=".4s">
-              <!-- Post Minimal-->
-              <div class="post-minimal">
-                <figure class="post-minimal-media"><a href="#"><img class="post-minimal-image" src="{% static 'images/grid-gallery-6-370x260.jpg' %}" alt="" width="370" height="260"/></a></figure>
-                <div class="post-minimal-meta">
-                  <ul class="list-inline">
-                    <li class="list-inline-item">Teacher: </li>
-                    <li class="list-inline-itema"><a href="#">Walter Myers</a></li>
-                  </ul>
-                </div>
-                <h4 class="post-minimal-title"><a href="#">Mathematics and Statistics</a></h4>
-              </div>
-            </div>
-          </div><a class="button button-lg button-primary-gradient wow fadeIn" data-wow-delay=".2s" href="#"><span>view all courses</span></a>
-        </div>
-      </section>
-      <!-- Latest Blog Posts-->
-      <section class="section section-lg bg-default text-center">
-        <div class="container">
-          <h2 class="wow fadeIn">Latest Blog Posts</h2>
-          <div class="row row-30 justify-content-center">
-            <div class="col-sm-10 col-md-6 wow fadeIn">
-              <!-- Post Light--><a class="post-light context-dark" href="#" style="background-image: url({% static 'images/grid-blog-1-570x350.jpg' %});">
-                <div class="post-light-inner">
-                  <div class="badge">News</div>
-                  <div class="post-light-main">
-                    <time class="post-light-time" datetime="2019">July 5, 2019, at 12:07 pm</time>
-                    <h4 class="post-light-title">Campus Opening Convocation</h4>
-                  </div>
-                </div></a>
-            </div>
-            <div class="col-sm-10 col-md-6 wow fadeIn" data-wow-delay=".2s">
-              <!-- Post Light--><a class="post-light context-dark" href="#" style="background-image: url({% static 'images/grid-blog-2-570x350.jpg' %});">
-                <div class="post-light-inner">
-                  <div class="badge">News</div>
-                  <div class="post-light-main">
-                    <time class="post-light-time" datetime="2019">July 5, 2019, at 12:07 pm</time>
-                    <h4 class="post-light-title">Freshman Matriculation Ceremony at Bradston College</h4>
-                  </div>
-                </div></a>
-            </div>
-            <div class="col-sm-10 col-md-6 wow fadeIn">
-              <!-- Post Light--><a class="post-light context-dark" href="#" style="background-image: url({% static 'images/grid-blog-3-570x350.jpg' %});">
-                <div class="post-light-inner">
-                  <div class="badge">News</div>
-                  <div class="post-light-main">
-                    <time class="post-light-time" datetime="2019">July 5, 2019, at 12:07 pm</time>
-                    <h4 class="post-light-title">Bradston College Leadership Academy</h4>
-                  </div>
-                </div></a>
-            </div>
-            <div class="col-sm-10 col-md-6 wow fadeIn" data-wow-delay=".2s">
-              <!-- Post Light--><a class="post-light context-dark" href="#" style="background-image: url({% static 'images/grid-blog-4-570x350.jpg' %});">
-                <div class="post-light-inner">
-                  <div class="badge">News</div>
-                  <div class="post-light-main">
-                    <time class="post-light-time" datetime="2019">July 5, 2019, at 12:07 pm</time>
-                    <h4 class="post-light-title">Incoming Freshmen Gather for Blueprints: Photo Gallery</h4>
-                  </div>
-                </div></a>
-            </div>
-          </div><a class="button button-lg button-primary-gradient wow fadeIn" href="#" data-wow-delay=".2s"><span>View all blog posts</span></a>
-        </div>
-      </section>
+{% endblock %}
+{% block footer %}
       <!-- Page Footer-->
       <footer class="section footer-classic bg-gray-950">
         <div class="footer-classic-main">
@@ -405,10 +131,4 @@
           </div>
         </div>
       </footer>
-    </div>
-    <div class="snackbars" id="form-output-global"></div>
-    <script src="{% static 'js/core.min.js' %}"></script>
-    <script src="{% static 'js/script.js' %}"></script>
-    <!-- coded by Drel-->
-  </body>
-</html>
+{% endblock %}
