--- a/blog/templates/blog/pagehead.html
+++ b/blog/templates/blog/pagehead.html
@@ -20,8 +20,8 @@
                     <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">About</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Typography</a>
-                    </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
+                    </li> 
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="{% url 'google_rozklad' %}">Розклад</a>
                     </li>
                   </ul>
                 </div>
