--- a/blog/templates/blog/rozklad.html
+++ b/blog/templates/blog/rozklad.html
@@ -1,1 +1,7 @@
+{% load static %}
+{% include 'patrs/pageshead.html' %}
+{% include 'patrs/pageshead.html' %}
+{% include 'patrs/pagesheader.html' %}
 <iframe width="99%" height="99%" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTfPY_kLyJSKjmreRhk7jOSiys8HrC3O35awkorZo6rRs-Gi5UwfL-_o-vjByAGnCQYEEgBJymyOrDb/pubhtml?widget=true&amp;chrome=false&amp;widget=false&amp;headers=false"></iframe>
+{% include 'patrs/pagesfooter.html' %}
+{% include 'patrs/java.html' %}
