added print images

--- a/blog/templates/blog/prdmets.html
+++ b/blog/templates/blog/prdmets.html
@@ -10,8 +10,8 @@
     			<div class="col-sm-6 col-lg-4 wow fadeIn">
               		<!--Post Minimal-->
               		<div class="post-minimal">
-                		<figure class="post-minimal-media"><a href="#"><img class="post-minimal-image" src="{{ post.image }}" alt="" width="370" height="260"/></a></figure>
-                		<div class="post-minimal-meta">
+                		<figure class="post-minimal-media"><a href="#"><img class="post-minimal-image" src="{{ post.path }}" alt="" width="370" height="260"/></a></figure>
+                    <div class="post-minimal-meta">
                   			<ul class="list-inline">
                     			<li class="list-inline-item">Викладач: </li>
                     			<li class="list-inline-itema"><a href="#">{{ post.teatcher }}</a></li>
