--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,7 +9,7 @@
         <!--Swiper-->
         <div class="swiper-container swiper-slider swiper-slider-1" data-loop="false" data-autoplay="5000" data-simulate-touch="false">
           <div class="swiper-wrapper">
-            <div class="swiper-slide" data-slide-bg="{% static 'images/swiper-slide-1.jpg' %}">
+            <div class="swiper-slide" data-slide-bg="{% static 'images/photo_2020-12-07_13-15-29.jpg' %}">
               <div class="swiper-slide-caption context-dark">
                 <div class="container">
                   <div class="row">
@@ -25,7 +25,7 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-slide" data-slide-bg="{% static 'images/swiper-slide-2.jpg' %}">
+            <div class="swiper-slide" data-slide-bg="{% static 'images/Programirovanie.jpg' %}">
               <div class="swiper-slide-caption context-dark">
                 <div class="container">
                   <div class="row">
@@ -41,7 +41,7 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-slide" data-slide-bg="{% static 'images/swiper-slide-3.jpg' %}">
+            <div class="swiper-slide" data-slide-bg="{% static 'images/Mat-Analiz.jpg' %}">
               <div class="swiper-slide-caption context-dark">
                 <div class="container">
                   <div class="row">
