--- a/blog/templates/blog/news.html
+++ b/blog/templates/blog/news.html
@@ -8,7 +8,7 @@
         <div class="row row-30 justify-content-center">
         	{% for new in news %}
             <div class="col-sm-10 col-md-6 wow fadeIn">
-              <!-- Post Light--><a class="post-light context-dark" href="#" style="background-image: url(images/grid-blog-1-570x350.jpg);">
+              <!-- Post Light--><a class="post-light context-dark" href="#" style="background-image: url('{% static new.path %}');">
                 <div class="post-light-inner">
                   <div class="badge">News</div>
                   <div class="post-light-main">
