--- a/blog/templates/blog/prdmets.html
+++ b/blog/templates/blog/prdmets.html
@@ -10,14 +10,14 @@
     			<div class="col-sm-6 col-lg-4 wow fadeIn">
               		<!--Post Minimal-->
               		<div class="post-minimal">
-                		<figure class="post-minimal-media"><a href="#"><img class="post-minimal-image" src="{{ post.path }}" alt="" width="370" height="260"/></a></figure>
+                		<figure class="post-minimal-media"><a href="{% url 'marks' %}"><img class="post-minimal-image" src="{{ post.path }}" alt="" width="370" height="260"/></a></figure>
                     <div class="post-minimal-meta">
                   			<ul class="list-inline">
                     			<li class="list-inline-item">Викладач: </li>
                     			<li class="list-inline-itema"><a href="#">{{ post.author }}</a></li>
                   			</ul>
                 		</div>
-                	<h4 class="post-minimal-title"><a href="#">{{ post.title }}</a></h4>
+                	<h4 class="post-minimal-title"><a href="{% url 'marks' %}">{{ post.title }}</a></h4>
               		</div>
             	</div>
 			{% endfor %}
