--- a/blog/templates/blog/news.html
+++ b/blog/templates/blog/news.html
@@ -4,7 +4,7 @@
 {% include 'patrs/pagesheader.html' %}
 <section class="section section-lg bg-default text-center">
     <div class="container">
-    	<h2 class="wow fadeIn">Latest Blog Posts</h2>
+    	<h2 class="wow fadeIn">Новини</h2>
         <div class="row row-30 justify-content-center">
         	{% for new in news %}
             <div class="col-sm-10 col-md-6 wow fadeIn">
