--- a/blog/templates/blog/patrs/pagespreloader.html
+++ b/blog/templates/blog/patrs/pagespreloader.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="preloader">
-      <div class="preloader-logo"><a class="brand" href="index.html"><img class="brand-logo-dark" src="{% static 'images/TNPULogo.png' %}" alt="" width="245" height="50"/><img class="brand-logo-light" src="{% static 'images/TNPULogo.png' %}" alt="" width="245" height="50"/></a>
+      <div class="preloader-logo"><a class="brand" href="index.html"><img class="brand-logo-dark" src="{% static 'images/flora.png' %}" alt="" width="245" height="50"/><img class="brand-logo-light" src="{% static 'images/flora.png' %}" alt="" width="245" height="50"/></a>
       </div>
       <div class="preloader-body">
         <div class="cssload-container">
