--- a/blog/templates/blog/rozklad.html
+++ b/blog/templates/blog/rozklad.html
@@ -2,6 +2,6 @@
 {% include 'patrs/pageshead.html' %}
 {% include 'patrs/pageshead.html' %}
 {% include 'patrs/pagesheader.html' %}
-<iframe width="99%" height="99%" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTfPY_kLyJSKjmreRhk7jOSiys8HrC3O35awkorZo6rRs-Gi5UwfL-_o-vjByAGnCQYEEgBJymyOrDb/pubhtml?widget=true&amp;chrome=false&amp;widget=false&amp;headers=false"></iframe>
+<iframe width="99%" height="99%" src="https://docs.google.com/spreadsheets/u/0/d/1Cr1WZrt52ST72G8KfEE2M3OdxZRc6x6m0sos_7eK8js/htmlembed/sheet?headers=false&gid=1500534144&amp;chrome=false&amp;widget=false&amp;headers=false"></iframe>
 {% include 'patrs/pagesfooter.html' %}
 {% include 'patrs/java.html' %}
