--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,48 +9,45 @@
         <!--Swiper-->
         <div class="swiper-container swiper-slider swiper-slider-1" data-loop="false" data-autoplay="5000" data-simulate-touch="false">
           <div class="swiper-wrapper">
-            <div class="swiper-slide" data-slide-bg="{% static 'images/photo_2020-12-07_13-15-29.jpg' %}">
+            <div class="swiper-slide" data-slide-bg="{% static 'images/Journal4.png' %}">
               <div class="swiper-slide-caption context-dark">
                 <div class="container">
                   <div class="row">
                     <div class="col-md-10 col-lg-7">
                       <div class="box-animation">
-                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">Quality Higher Education</h6>
-                        <h2 data-caption-animate="slideInLeft" data-caption-delay="300">Any Successful Career Starts  <span class="text-italic font-weight-bold">With Good Education</span>
+                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">Висока якість навчання</h6>
+                        <h2 data-caption-animate="slideInLeft" data-caption-delay="300"><span class="text-italic font-weight-bold">Швидкий доступ до оцінок</span>
                         </h2>
-                        <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#"><span>sign up for excursion</span></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="swiper-slide" data-slide-bg="{% static 'images/Programirovanie.jpg' %}">
+            <div class="swiper-slide" data-slide-bg="{% static 'images/Journal1.png' %}">
               <div class="swiper-slide-caption context-dark">
                 <div class="container">
                   <div class="row">
                     <div class="col-md-10 col-lg-7">
                       <div class="box-animation">
-                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">A vAriety of programs</h6>
-                        <h2 data-caption-animate="slideInLeft" data-caption-delay="300">Providing Students with  <span class="text-italic font-weight-bold">Professional Education</span>
+                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">Комфортне відображення</h6>
+                        <h2 data-caption-animate="slideInLeft" data-caption-delay="300"> <span class="text-italic font-weight-bold">Швидкий доступ</span>
                         </h2>
-                        <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#"><span>sign up for excursion</span></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="swiper-slide" data-slide-bg="{% static 'images/Mat-Analiz.jpg' %}">
+            <div class="swiper-slide" data-slide-bg="{% static 'images/Journal2.png' %}">
               <div class="swiper-slide-caption context-dark">
                 <div class="container">
                   <div class="row">
                     <div class="col-md-10 col-lg-7">
                       <div class="box-animation">
-                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">Campus Community</h6>
-                        <h2 data-caption-animate="slideInLeft" data-caption-delay="300">Become a Part of Our Campus and <span class="text-italic font-weight-bold">Make Friends</span>
+                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">Можливість комунікації</h6>
+                        <h2 data-caption-animate="slideInLeft" data-caption-delay="300"><span class="text-italic font-weight-bold">Якісне користування</span>
                         </h2>
-                        <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#"><span>sign up for excursion</span></a></div>
                       </div>
                     </div>
                   </div>
